--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,6 @@
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-
-.App-header {
+.App{
+  text-align: center;
   margin: 0;
   padding: 0;
-
-  background-color: #282c34;
-  min-height: 15vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 15px;
-  color: white;
 }
 
