--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,34 @@
 body{
+    margin: 0;
+    padding: 0;
     background-color: rgb(255, 255, 255);
-    
+    font-family: 'Roboto', sans-serif;
 }
 
-#root{
-    margin: 0;
-    padding: 0 ;
+header {
+    background-color: rgb(90, 196, 215);
+    padding: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 30%;
+}
+
+nav ul{
+    list-style-type: none;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 8px;
+}
+
+nav a{
+    text-decoration: none;
 }
